--- a/public/style.css
+++ b/public/style.css
@@ -1,29 +1,20 @@
-.flex-container {
+/* .flex-container {
     display: flex;
     align-items: stretch;
 }
 
-h1 {
-    background-color: black;
-    color: white;
-  }
-
 .flex-row {
-    -ms-flex-direction: row!important;
     flex-direction: row!important;
 }
 
 .flex-shrink-0 {
-    -ms-flex-negative: 0!important;
     flex-shrink: 0!important;
 }
 .flex-grow-1 {
-    -ms-flex-positive: 1!important;
     flex-grow: 1!important;
 }
 
 .d-flex {
-    display: -ms-flexbox!important;
     display: flex!important;
 }
 
@@ -35,12 +26,836 @@ h1 {
     clear: both;
 }
 
+.track-header {
+    display: block;
+    position: relative;
+    top: 0;
+    left: 0;
+    z-index: 3;
+    text-align: center;
+    padding: 0.3rem;
+    width: 80px;
+    background-color: #333333;
+    height: 70px;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    border-bottom: 1px solid #707070;
+}
+
+.track-title {
+    margin-bottom: 0.3rem;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+}
+
+.track-buttons {
+    display: block;
+}
+
 .track-audio {
+    cursor: pointer;
+    width: 100%;
+    height: 70px;
+    position: relative;
+    top: 0;
+    left: 0;
+    z-index: 2;
+} */
+
+/*!
+ *  Font Awesome 4.7.0 by @davegandy - http://fontawesome.io - @fontawesome
+ *  License - http://fontawesome.io/license (Font: SIL OFL 1.1, CSS: MIT License)
+ */
+
+body {
+    margin: 0;
+    font-family: "Quicksand", "Avenir", Arial, sans-serif;
+    background-color: #202020;
+    color: #ffffff
+}
+
+h1 {
+    margin: 0 0 1.5rem 0
+}
+
+a {
+    color: #f2e3cf;
+    text-decoration: none;
+    cursor: pointer
+}
+
+a:hover {
+    color: #ffffff
+}
+
+a.name-button {
+    color: #ffffff;
+    text-decoration: underline
+}
+
+a.name-button:hover {
+    text-decoration: none
+}
+
+a.blue {
+    color: #258faf
+}
+
+a.blue:hover {
+    color: #202020
+}
+
+.text-grey {
+    color: #d0d0d0
+}
+
+.clear {
+    clear: both
+}
+
+.block {
+    display: block
+}
+
+.prewrap {
+    white-space: pre-wrap
+}
+
+.break-word {
+    overflow-wrap: break-word
+}
+
+.spacer-top {
+    padding: 2.4rem
+}
+
+.spacer-bottom {
+    padding: 1.45rem
+}
+
+.no-margin {
+    margin: 0
+}
+
+.margin-bottom {
+    margin-bottom: 1rem
+}
+
+.half-margin-bottom {
+    margin-bottom: 0.5rem
+}
+
+.half-margin-left {
+    margin-left: 0.5rem
+}
+
+.half-margin-right {
+    margin-right: 0.5rem
+}
+
+.half-margin-top {
+    margin-top: 0.5rem
+}
+
+.nowrap {
+    white-space: nowrap
+}
+
+.half-padding {
+    padding: 0.5rem
+}
+
+.small-text {
+    font-size: 1rem
+}
+
+.smaller-text {
+    font-size: 0.9rem
+}
+
+.share-url {
+    background-color: #e6e6e6;
+    border: 0;
+    box-shadow: 0 0 0 #ffffff;
+    margin: 0
+}
+
+.share-url:focus {
+    background-color: #e6e6e6;
+    border: 0;
+    box-shadow: 0 0 0 #ffffff
+}
+
+.control-bar {
+    overflow: hidden;
+    z-index: 10;
+    background-color: #202020;
+    box-shadow: 0px 4px 12px 0px rgba(0,0,0,0.2);
+    -webkit-box-shadow: 0px 4px 12px 0px rgba(0,0,0,0.2)
+}
+
+.control-bar .control-header {
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    overflow-x: scroll;
+    overflow-y: hidden;
+    -ms-overflow-style: none;
+    scrollbar-width: none
+}
+
+.control-bar .control-header::-webkit-scrollbar {
+    display: none
+}
+
+.control-bar .control-header .header-text {
+    font-size: 1.3rem
+}
+
+.control-bar .header-time {
+    font-family: "Avenir", Arial, sans-serif;
+    text-align: center;
+    margin: 0.3rem 0 0
+}
+
+.control-bar .control-text {
+    display: block;
+    text-align: center;
+    margin: 0.3rem 0.5rem 0;
+    color: white;
+    font-size: 14px
+}
+
+.control-bar .control-button {
+    display: block;
+    text-align: center;
+    background-color: #333333;
+    margin: 0.3rem 0.5rem 0;
+    padding: 0.5rem 1.5rem;
+    border-radius: 5px;
+    color: white;
+    cursor: pointer;
+    white-space: nowrap
+}
+
+.control-bar .control-button:hover {
+    background-color: #424242
+}
+
+.volume-control {
+    width: 100%
+}
+
+.seek-container {
+    display: block;
+    padding: 1.5rem;
+    background-color: #999999;
+    color: #ffffff;
+    cursor: pointer
+}
+
+.seek-bar {
+    position: absolute;
+    display: block;
+    left: 80px;
+    top: 0px;
+    height: 66px;
+    background-color: rgba(0,0,0,0.22);
+    background-color: #000000;
+    cursor: pointer
+}
+
+.loop-marker {
+    position: absolute;
+    display: block;
+    top: 0px;
+    height: 70px;
+    border-color: #FFFFFF;
+    background-color: rgba(122,105,55,0.5);
+    z-index: 4
+}
+
+.loop-marker.loop-marker-start {
+    border-right: 3px solid
+}
+
+.loop-marker.loop-marker-end {
+    border-left: 3px solid
+}
+
+.track {
+    position: relative;
+    display: block;
+    font-weight: bold;
+    color: #eeeeee;
+    clear: both
+}
+
+.track.muted {
+    border-color: #333333
+}
+
+.track.muted .track-header {
+    background-color: #4f4f4f
+}
+
+.track.muted .track-header .track-buttons .track-button.mute {
+    background-color: #522929
+}
+
+.track.muted .track-header .track-buttons .track-button.mute:hover {
+    background-color: #6E4747
+}
+
+.track.muted .track-header .track-title {
+    text-decoration: line-through
+}
+
+.track.muted .track-audio {
+    filter: grayscale(0.75) brightness(1.5) opacity(0.5)
+}
+
+.track.grey {
+    color: #333333;
+    background-color: #bbbbbb
+}
+
+.track .track-header {
+    position: relative;
+    top: 0;
+    left: 0;
+    z-index: 3;
+    text-align: center;
+    padding: 0.3rem;
+    width: 80px;
+    background-color: #333333;
+    height: 70px;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    border-bottom: 1px solid #707070
+}
+
+.track .track-header .track-title {
+    margin-bottom: 0.3rem;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis
+}
+
+.track .track-header .track-buttons {
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none
+}
+
+.track .track-header .track-buttons .track-button {
+    cursor: pointer;
+    display: inline-block;
+    border-radius: 5px;
+    border: 1px solid #cecece;
+    min-width: 26px;
+    padding: 0 0.3rem;
+    height: 26px
+}
+
+.track .track-header .track-buttons .track-button:hover {
+    background-color: #7a7a7a
+}
+
+.track .track-header .track-buttons .track-button.left {
+    margin-right: 0.4rem
+}
+
+.track .track-header .track-buttons .track-button.mute {
+    background-color: #292952
+}
+
+.track .track-header .track-buttons .track-button.mute:hover {
+    background-color: #47476E
+}
+
+.track .track-header .track-buttons .track-button.solo {
+    background-color: #5f5c08
+}
+
+.track .track-header .track-buttons .track-button.solo:hover {
+    background-color: #88840c
+}
+
+.track .track-header .track-buttons .track-button.solo.solo-activated {
+    color: black;
+    background-color: #f5ed19
+}
+
+.track .track-header .track-buttons .track-button.comment {
+    font-weight: normal;
+    font-size: 14px;
+    border: none;
+    padding: 0 0.5rem;
+    background-color: #505050
+}
+
+.track .track-header .track-buttons .track-button.comment:hover {
+    background-color: #707070
+}
+
+.track .track-audio {
     cursor: pointer;
     width: 100%;
     height: 70px;
     position: absolute;
     top: 0;
     left: 0;
-    z-index: 2;
+    z-index: 2
+}
+
+.track .track-audio .track-title-overlay {
+    position: absolute;
+    display: block;
+    left: 80px;
+    background-color: rgba(0,0,0,0.7);
+    padding: 0.25rem 0.5rem;
+    z-index: 6
+}
+
+.track .track-audio .track-seek-bar {
+    position: absolute;
+    display: block;
+    left: 80px;
+    height: 70px;
+    background-color: rgba(50,50,50,0.5);
+    cursor: pointer;
+    z-index: 5
+}
+
+.track .track-audio .comment-bubble {
+    position: absolute;
+    display: block;
+    background-color: #e4df31;
+    width: 15px;
+    height: 15px;
+    border-radius: 15px;
+    bottom: 0px;
+    border: 1px solid black;
+    box-shadow: 4px 4px 4px rgba(0,0,0,0.2);
+    z-index: 10
+}
+
+.track .track-audio .comment-bubble.highlighted {
+    background-color: #1ac0ff
+}
+
+.track .track-audio .comment-bubble.big {
+    width: 20px;
+    height: 20px;
+    background-color: #1ac0ff;
+    border: 2px solid black
+}
+
+.track .track-audio .waveform-image {
+    position: absolute;
+    top: 0;
+    left: 80px;
+    image-rendering: pixelated;
+    user-drag: none;
+    user-select: none;
+    -moz-user-select: none;
+    -webkit-user-drag: none;
+    -webkit-user-select: none;
+    -ms-user-select: none;
+    z-index: 3
+}
+
+.track .track-audio .waveform-line {
+    position: absolute;
+    top: 0;
+    left: 80px;
+    height: 35px;
+    border-bottom: #000000 1px solid;
+    z-index: 2
+}
+
+.track .track-audio .waveform-click-target {
+    position: absolute;
+    top: 0;
+    left: 80px;
+    height: 70px;
+    opacity: 0;
+    z-index: 5
+}
+
+.comment-tooltip {
+    z-index: 8;
+    position: absolute;
+    width: 250px;
+    border-radius: 5px;
+    background-color: rgba(0,0,0,0.75);
+    font-weight: normal
+}
+
+.comment-tooltip .content {
+    padding: 1rem;
+    color: white;
+    width: 100%
+}
+
+.comment-tooltip .content .separator {
+    border-bottom: 1px solid #aaaaaa
+}
+
+.comment-tooltip .content .comment-text {
+    max-height: 240px;
+    overflow: hidden
+}
+
+.half-margin-left {
+    margin-left: 0.5rem
+}
+
+.half-margin-right {
+    margin-right: 0.5rem
+}
+
+.comments-loading {
+    position: fixed;
+    bottom: 45px;
+    right: 0;
+    padding: 0.2rem 0.5rem;
+    border-top: 1px solid rgba(255,255,255,0.2);
+    border-left: 1px solid rgba(255,255,255,0.2);
+    background-color: rgba(0,0,0,0.5);
+    z-index: 9;
+    border-radius: 5px 0 0 0;
+    font-size: 0.8rem
+}
+
+.bottom-bar {
+    position: fixed;
+    bottom: 0;
+    padding: 0.4rem 0.5rem;
+    width: 100%;
+    background-color: #202020;
+    color: #ffffff;
+    border-top: 1px solid rgba(0,0,0,0.5);
+    box-shadow: 0px -4px 12px 0px rgba(0,0,0,0.2);
+    -webkit-box-shadow: 0px -4px 12px 0px rgba(0,0,0,0.2);
+    z-index: 10
+}
+
+.bottom-bar .right-bar {
+    text-align: right
+}
+
+.bottom-bar .bottom-button {
+    color: white;
+    margin-top: 0.25rem;
+    font-size: 1.4rem
+}
+
+.bottom-bar .bottom-button:hover {
+    color: #d0d0d0;
+    cursor: pointer
+}
+
+.bottom-bar a:hover {
+    color: #d0d0d0
+}
+
+.text-align-container {
+    height: 100%
+}
+
+.inline-logo {
+    width: 20px;
+    height: 20px
+}
+
+.inline-logo.inline-logo-large {
+    width: 32px;
+    height: 32px
+}
+
+.overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 11;
+    background-color: rgba(0,0,0,0.5)
+}
+
+.overlay a {
+    color: #258faf
+}
+
+.overlay a:hover {
+    color: #1f7c98;
+    text-decoration: underline
+}
+
+.overlay .float-close {
+    float: right;
+    color: #0a0a0a;
+    font-size: 1rem
+}
+
+.overlay .float-close:hover {
+    text-decoration: none
+}
+
+.overlay .overlay-box {
+    margin: 0 auto;
+    margin-top: 200px;
+    background-color: white;
+    padding: 1rem;
+    border: 3px black solid;
+    border-radius: 5px;
+    width: 88%;
+    max-width: 480px;
+    color: #000000
+}
+
+.overlay.info-overlay .overlay-box {
+    margin-top: 40px;
+    max-width: 600px;
+    max-height: 90%;
+    overflow-y: scroll;
+    -ms-overflow-style: none;
+    scrollbar-width: none
+}
+
+.overlay.info-overlay .overlay-box::-webkit-scrollbar {
+    display: none
+}
+
+.overlay-mask,.overlay {
+    opacity: 1;
+    transition: opacity 0.2s;
+    -webkit-transition: opacity 0.2s
+}
+
+.overlay-mask.hide,.overlay.hide {
+    display: none
+}
+
+.overlay-mask.faded-out,.overlay.faded-out {
+    opacity: 0
+}
+
+.comments-panel-interior {
+    color: #ffffff
+}
+
+.comments-panel-interior a.link {
+    color: #77c5dc
+}
+
+.comments-panel-interior a.link.white-text {
+    color: #dedede
+}
+
+.comments-panel-interior a.link.red-text {
+    color: #e27d7d
+}
+
+.comments-panel-interior a.link.black-text {
+    color: #373737
+}
+
+.comments-panel-interior a.link:hover {
+    color: #ffffff;
+    text-decoration: underline
+}
+
+.comments-panel-interior a.link.underline-link {
+    text-decoration: underline
+}
+
+.comments-panel-interior a.link.underline-link:hover {
+    text-decoration: none
+}
+
+.comments-panel-interior label {
+    color: #ffffff
+}
+
+.comments-panel-interior .comments-header .header-text .big {
+    font-size: 1.5rem;
+    font-weight: bold
+}
+
+.comments-panel-interior .comments-header .header-text .big .smaller {
+    font-size: 1rem;
+    font-weight: normal
+}
+
+.comments-panel-interior .comments-header .header-text .small {
+    font-size: 1rem
+}
+
+.comments-panel-interior .comments-header .close {
+    color: #fcfcfc;
+    font-size: 1.5rem
+}
+
+.comments-panel-interior .comments-header .close:hover {
+    text-decoration: none
+}
+
+.comments-panel-interior .comments-content {
+    margin-bottom: 0.5rem;
+    overflow: auto
+}
+
+.comments-panel-interior .comments-content .scrollable {
+    overflow-y: scroll;
+    -ms-overflow-style: none;
+    scrollbar-width: none
+}
+
+.comments-panel-interior .comments-content .scrollable::-webkit-scrollbar {
+    display: none
+}
+
+.comments-panel-interior .comments-content .comments-list .indented-list {
+    margin-left: 2rem
+}
+
+.comments-panel-interior .comments-content .comments-list .item {
+    font-size: 0.8rem;
+    background-color: #404040;
+    border: 1px solid #070707;
+    margin-bottom: 0.5rem
+}
+
+.comments-panel-interior .comments-content .comments-list .item.highlight {
+    background-color: #345058
+}
+
+.comments-panel-interior .comments-content .comments-list .item .header {
+    align-items: center;
+    padding: 0.3rem;
+    background-color: #555555;
+    border-bottom: 1px solid #070707
+}
+
+.comments-panel-interior .comments-content .comments-list .item .header .artist-check {
+    color: #2ba6cb
+}
+
+.comments-panel-interior .comments-content .comments-list .item .message {
+    padding: 0.3rem 0.5rem;
+    word-break: break-word
+}
+
+.comments-panel-interior .comments-content .comments-list .item .footer {
+    color: #e5e5e5;
+    padding: 0.3rem;
+    font-size: 11px
+}
+
+.comments-panel-interior .comments-content .comments-list .item .footer .timestamp {
+    white-space: nowrap
+}
+
+.comments-panel-interior .comments-content .comments-list .item .footer .liked {
+    color: #e27d7d
+}
+
+.comments-panel-interior .comment-text-input {
+    height: 100px;
+    margin-bottom: 0.5rem
+}
+
+.main-container .comments-spacer {
+    flex: 0 0 320px
+}
+
+.side-panel-container {
+    position: fixed;
+    background-color: #333333;
+    color: #ffffff;
+    z-index: 4;
+    width: 320px;
+    height: 100%;
+    right: 0px;
+    top: 0px
+}
+
+.side-panel-container .side-panel {
+    padding: 0.5rem 0.8rem;
+    overflow-y: hidden;
+    box-shadow: -4px 0px 12px 0px rgba(0,0,0,0.2);
+    -webkit-box-shadow: -4px 0px 12px 0px rgba(0,0,0,0.2);
+    height: 100% !important
+}
+
+@media (max-width: 767.98px) {
+    .control-bar .control-button {
+        margin:0.3rem 0.4rem 0;
+        padding: 0.5rem 1rem
+    }
+}
+
+@media (max-width: 575.98px) {
+    .w-xs-100 {
+        width:100%
+    }
+
+    .small-text {
+        font-size: 0.8rem
+    }
+
+    .control-button:hover,.track-button:hover {
+        background-color: #444444
+    }
+
+    .control-button.muted:hover,.muted .track-button:hover {
+        background-color: #888888
+    }
+
+    .spacer-top {
+        padding: 3.6em
+    }
+
+    .side-panel-container {
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-color: rgba(0,0,0,0.6);
+        z-index: 20
+    }
+
+    .side-panel-container .side-panel {
+        z-index: 21;
+        margin: auto auto;
+        background-color: #333333;
+        width: 96%;
+        max-height: 96%;
+        height: initial !important;
+        box-shadow: 2px 2px 12px 0px rgba(0,0,0,0.2);
+        -webkit-box-shadow: 2px 2px 12px 0px rgba(0,0,0,0.2);
+        border-radius: 5px;
+        border: 1px solid #000000
+    }
+
+    .side-panel-container .spacer-top {
+        display: none
+    }
+
+    .side-panel-container .spacer-bottom {
+        display: none
+    }
+
+    .main-container .comments-spacer {
+        flex: 0 0 0;
+        width: 0px
+    }
 }
