--- a/public/style.css
+++ b/public/style.css
@@ -14,7 +14,7 @@ h1 {
     margin: 0 0 1.5rem 0
 }
 
-a {
+/* a {
     color: #f2e3cf;
     text-decoration: none;
     cursor: pointer
@@ -120,17 +120,25 @@ a.blue:hover {
     background-color: #e6e6e6;
     border: 0;
     box-shadow: 0 0 0 #ffffff
+} */
+
+.black-bar {
+    height: 70px;
+    background-color: #202020;
+    color: #ffffff;
 }
 
 .control-bar {
-    overflow: hidden;
-    z-index: 10;
+    /* display: block; */
+    height: 70px;
+    /* overflow: hidden; */
+    /* z-index: 10; */
     background-color: #202020;
-    box-shadow: 0px 4px 12px 0px rgba(0,0,0,0.2);
-    -webkit-box-shadow: 0px 4px 12px 0px rgba(0,0,0,0.2)
+    /* box-shadow: 0px 4px 12px 0px rgba(0,0,0,0.2);
+    -webkit-box-shadow: 0px 4px 12px 0px rgba(0,0,0,0.2) */
 }
 
-.control-bar .control-header {
+/* .control-bar .control-header {
     white-space: nowrap;
     text-overflow: ellipsis;
     overflow-x: scroll;
@@ -175,7 +183,7 @@ a.blue:hover {
 
 .control-bar .control-button:hover {
     background-color: #424242
-}
+} */
 
 .volume-control {
     width: 100%
@@ -326,7 +334,7 @@ a.blue:hover {
     background-color: #f5ed19
 }
 
-.track .track-header .track-buttons .track-button.comment {
+/* .track .track-header .track-buttons .track-button.comment {
     font-weight: normal;
     font-size: 14px;
     border: none;
@@ -336,7 +344,7 @@ a.blue:hover {
 
 .track .track-header .track-buttons .track-button.comment:hover {
     background-color: #707070
-}
+} */
 
 .track .track-audio {
     cursor: pointer;
@@ -367,7 +375,7 @@ a.blue:hover {
     z-index: 5
 }
 
-.track .track-audio .comment-bubble {
+/* .track .track-audio .comment-bubble {
     position: absolute;
     display: block;
     background-color: #e4df31;
@@ -389,7 +397,7 @@ a.blue:hover {
     height: 20px;
     background-color: #1ac0ff;
     border: 2px solid black
-}
+} */
 
 .track .track-audio .waveform-image {
     position: absolute;
@@ -423,7 +431,7 @@ a.blue:hover {
     z-index: 5
 }
 
-.comment-tooltip {
+/* .comment-tooltip {
     z-index: 8;
     position: absolute;
     width: 250px;
@@ -791,5 +799,5 @@ a.blue:hover {
     .main-container .comments-spacer {
         flex: 0 0 0;
         width: 0px
-    }
+    } */
 }
