--- a/public/style.css
+++ b/public/style.css
@@ -91,14 +91,14 @@ h1 {
     left: 0;
     z-index: 3;
     text-align: center;
-    padding: 0.3rem;
-    width: 250px;
+    padding: 0.2rem;
+    width: 300px;
     background-color: #535353;
-    height: 70px;
+    height: 69px;
     overflow: hidden;
     white-space: nowrap;
     text-overflow: ellipsis;
-    border-bottom: 1px solid #707070
+    border-bottom: 1px solid #707070;
 }
 
 .track .track-header .track-title {
@@ -120,11 +120,11 @@ h1 {
 .track .track-header .track-buttons .track-button {
     cursor: pointer;
     display: inline-block;
-    border: 1.5px solid #191919;
-    margin-right: 0.4rem;
     min-width: 26px;
     padding: 0 0.3rem;
-    height: 26px
+    height: 26px;
+    line-height: 26px;
+    text-align: center;
 }
 
 .track .track-header .track-buttons .track-button:hover {
@@ -133,7 +133,7 @@ h1 {
 
 .track .track-header .track-buttons .track-button.mute {
     border-radius: 5px 0 0 5px;
-    background-color: #444444
+    background-color: #242424
 }
 
 .track .track-header .track-buttons .track-button.mute:hover {
@@ -142,11 +142,12 @@ h1 {
 
 .track .track-header .track-buttons .track-button.solo {
     border-radius: 0 5px 5px 0;
-    background-color: #5f5c08
+    margin-right: 0.4rem;
+    background-color: #242424
 }
 
 .track .track-header .track-buttons .track-button.solo:hover {
-    background-color: #88840c
+    background-color: #7a7600
 }
 
 .track .track-header .track-buttons .track-button.solo.solo-activated {
@@ -154,10 +155,12 @@ h1 {
     background-color: #d5d04b
 }
 
+.track .track-header .pan,
 .track .track-header .volume-control {
-    display: inline-block;
+    display: inline-flex;
     min-width: 25px;
-    width: 100px;
+    align-items: center;
+    padding-right: 0.8rem;
 }
 
 .track .track-audio {
