--- a/src/components/Knobs/knob.module.css
+++ b/src/components/Knobs/knob.module.css
@@ -1,6 +1,6 @@
 .container {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     align-items: center;
 }
 
@@ -19,7 +19,7 @@
     position: absolute;
     width: 100%;
     height: 100%;
-    background-color: #535bf2;
+    background-color: #898989;
     border-radius: 100%;
 
 }
