--- a/public/style.css
+++ b/public/style.css
@@ -168,8 +168,9 @@ h1 {
     width: 100%;
     height: 70px;
     position: absolute;
+    padding: 0.2rem;
     top: 0;
-    left: 0;
+    left: 300;
     z-index: 2
 }
 
@@ -185,8 +186,10 @@ h1 {
 .track .track-audio .track-seek-bar {
     position: absolute;
     display: block;
-    left: 250px;
+    left: 300px;
+    top: 0;
     height: 70px;
+    padding: 0.2rem;
     background-color: rgba(50,50,50,0.5);
     cursor: pointer;
     z-index: 5
@@ -247,7 +250,7 @@ h1 {
 .track .track-audio .waveform-click-target {
     position: absolute;
     top: 0;
-    left: 250px;
+    left: 300px;
     width: 100%;
     height: 70px;
     opacity: 0;
