--- a/public/style.css
+++ b/public/style.css
@@ -77,16 +77,6 @@ h1 {
     flex-grow: 1; 
 }
 
-.control-bar {
-    /* display: block; */
-    height: 70px;
-    /* overflow: hidden; */
-    /* z-index: 10; */
-    background-color: #202020;
-    /* box-shadow: 0px 4px 12px 0px rgba(0,0,0,0.2);
-    -webkit-box-shadow: 0px 4px 12px 0px rgba(0,0,0,0.2) */
-}
-
 .seek-container {
     display: block;
     padding: 1.5rem;
@@ -152,10 +142,11 @@ h1 {
     width: 300px;
     background-color: #535353;
     height: 69px;
-    overflow: hidden;
+    overflow: visible;
     white-space: nowrap;
     text-overflow: ellipsis;
     border-bottom: 1px solid #707070;
+    border-left: 30px solid #3b3b3b;
 }
 
 .track .track-header .track-title {
@@ -164,6 +155,24 @@ h1 {
     white-space: nowrap;
     text-overflow: ellipsis
 }
+
+.track .track-header .drag-handle {
+    position: absolute;
+    left: -25px;
+    top: 50%; 
+    transform: translateY(-50%);
+    border-radius: 5px;
+    cursor: pointer;
+    display: inline-flex;
+    min-width: 15px;
+    height: 26px;
+    z-index: 15;
+}
+
+.track .track-header .drag-handle:active,
+.track .track-header .drag-handle:hover {
+    background-color: rgba(187, 187, 187, 0.327);
+  }
 
 .track .track-header .track-buttons {
     -webkit-touch-callout: none;
