--- a/public/style.css
+++ b/public/style.css
@@ -36,9 +36,8 @@ h1 {
     opacity: 1;
   }
 
-.page-header .play-button,
-.page-header .pause-button {
-    margin-left: 10%;
+.page-header .button
+{
     width: 80px;
     height: 60px;
     border-radius: 10%; 
@@ -47,8 +46,18 @@ h1 {
     cursor: pointer;
 }
 
+.page-header .button .play-button,
+.page-header .button .pause-button {
+    margin-left: 10%;
+}
+
+.page-header .button .doc-button {
+    margin-right: 20%;
+}
+
 .page-header .play-button i,
-.page-header .pause-button i {
+.page-header .pause-button i, 
+.page-header .doc-button i {
     position: absolute;
     top: 50%;
     left: 50%;
